novo arquivo e alteracao no form

--- a/FORMULARIOS.HTML
+++ b/FORMULARIOS.HTML
@@ -8,7 +8,7 @@
 <FORM>
 
 <TABLE>
-<TR> <TD> NOME:     </TD> <TD> <INPUT TYPE="TEXT" SIZE="40"> </TD></TR>
+<TR> <TD> NOME COMPLETO:     </TD> <TD> <INPUT TYPE="TEXT" SIZE="40"> </TD></TR>
 <TR> <TD> TELEFONE: </TD> <TD> <INPUT TYPE="TEXT" SIZE="20"> </TD></TR>
 <TR> <TD> EMAIL:    </TD> <TD> <INPUT TYPE="TEXT" SIZE="50"> </TD></TR>
 </TABLE>
